Ajustes no EndPoint /categorias/id