@@ -10,6 +10,7 @@ import org.springframework.boot.SpringApplication;
 import org.springframework.boot.autoconfigure.SpringBootApplication;
 
 import java.util.Arrays;
+import java.util.List;
 
 @SpringBootApplication
 public class SistemamcApplication implements CommandLineRunner {
@@ -24,7 +25,7 @@ public class SistemamcApplication implements CommandLineRunner {
 
     //popular o banco de dados com categorias
     @Override
-    public void run(String... args) throws Exception {
+    public void run(String... args) {
         Categoria cat1 = new Categoria(null, "Informática");
         Categoria cat2 = new Categoria(null, "Escritório");
 
@@ -33,11 +34,11 @@ public class SistemamcApplication implements CommandLineRunner {
         Produto p3 = new Produto(null, "Mouse", 80.00);
 
         cat1.getProdutos().addAll(Arrays.asList(p1, p2, p3));
-        cat2.getProdutos().addAll(Arrays.asList(p2));
+        cat2.getProdutos().addAll(List.of(p2));
 
-        p1.getCategorias().addAll(Arrays.asList(cat1));
+        p1.getCategorias().addAll(List.of(cat1));
         p2.getCategorias().addAll(Arrays.asList(cat1, cat2));
-        p3.getCategorias().addAll(Arrays.asList(cat1));
+        p3.getCategorias().addAll(List.of(cat1));
 
 
         categoriaRepository.saveAll(Arrays.asList(cat1, cat2));
